--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -1,31 +1,31 @@
 <body>
-	<p id="notice"><%= flash[:delete] %></p>
-	<h1>Books</h1>
-	<table>
-		<thead>
-			<tr>
-				<th>Title</th>
-				<th>Body</th>
-				<th colspan=3></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @books.each do |books| %>
+<h1>Books</h1>
+<table>
+	<thead>
+		<tr>
+			<th>Title</th>
+			<th>Body</th>
+			<th colspan=3></th>
+		</tr>
+	</thead>
+	<tbody>
+		<p id="notice"><%= flash[:delete] %></p>
+			<% @books.each do |book| %>
 				<tr>
 					<td>
-						<%= books.title %>
+						<%= book.title %>
 					</td>
 					<td>
-						<%= books.body %>
+						<%= book.body %>
 					</td>
 					<td>
-						<%= link_to "Show", post_path(books.id) %>
+						<%= link_to "Show", book_path(book.id) %>
 					</td>
 					<td>
-						<%= link_to "Edit", edit_path(books.id) %>
+						<%= link_to "Edit", edit_book_path(book.id) %>
 					</td>
 					<td>
-						<%= link_to "Destroy",destroy_path(books.id),method: :delete, "data-confirm" => "本当に削除しますか？" %>   
+						<%= link_to "Destroy",destroy_book_path(book.id),method: :delete %>   
 					</td>
 				</tr>
 			<% end %>
